# multi_model_rag

./: .dockerignore  .gitignore  Dockerfile.parser  README.md  config.py  docker-compose-parser.yml  main.py  meta_data.py  ollama-init.sh  pyproject.toml
ingestion/: chunker.py  config.yaml  embedding.py  image_caption.py  loader.py  pdf_utils.py  pipeline.py  post_processor.py  reranker.py  storage.py  validator.py  vdb.py
ingestion/api/: app.py  dependency.py  middleware.py  parser_app.py  schema.py
ingestion/api/route/: generate.py  health.py  ingest.py  parse.py  search.py
utils/: logging_config.py
